--- a/main.html
+++ b/main.html
@@ -7,6 +7,42 @@
 </head>
 
 <body>
+	<form action="/main.html job-app-form-sidheshwarchoure">
+		<label for="name">Name</label><br>
+		<input type="text" id="#name"><br><br>
+		<label for="email">Email</label><br>
+		<input type="text" id="#email"><br><br>
+		<label for="gender">Gender</label><br>
+		<input type="radio" name="Gender" value="Male">
+		<label for="male">Male</label>
+
+		<input type="radio" name="Gender" value="female">
+		<label for="male">Female</label><br><br>
+
+		<label for="laptop brands">Laptop Brands</label><br>
+		<input type="checkbox" name="Laptop Brands" value="Apple">
+		<label for="apple">Apple</label>
+
+		<input type="checkbox" name="Laptop Brands" value="Apple">
+		<label for="asus">Asus</label>
+
+		<input type="checkbox" name="Laptop Brands" value="Apple">
+		<label for="hp">HP</label><br><br>
+
+		<label for="age">Age</label><br>
+		<input type="number" id="#age"><br><br>
+
+		<label for="DOB">DOB</label><br>
+		<input type="date" id="#dob"><br><br>
+
+		<label for="password">Password</label><br>
+		<input type="password" id="#password"><br><br>
+
+		<input type="submit" value="submit">
+		
+
+
+
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
