--- a/main.html
+++ b/main.html
@@ -8,18 +8,18 @@
 
 <body>
 	<form action="/main.html job-app-form-sidheshwarchoure">
-		<label for="name">Name</label><br>
+		<label for="name">Name*</label><br>
 		<input type="text" id="#name"><br><br>
-		<label for="email">Email</label><br>
+		<label for="email">Email*</label><br>
 		<input type="text" id="#email"><br><br>
-		<label for="gender">Gender</label><br>
+		<label for="gender">Gender*</label><br>
 		<input type="radio" name="Gender" value="Male">
 		<label for="male">Male</label>
 
 		<input type="radio" name="Gender" value="female">
 		<label for="male">Female</label><br><br>
 
-		<label for="laptop brands">Laptop Brands</label><br>
+		<label for="laptop brands">Laptop Brands*</label><br>
 		<input type="checkbox" name="Laptop Brands" value="Apple">
 		<label for="apple">Apple</label>
 
@@ -29,13 +29,13 @@
 		<input type="checkbox" name="Laptop Brands" value="Apple">
 		<label for="hp">HP</label><br><br>
 
-		<label for="age">Age</label><br>
+		<label for="age">Age*</label><br>
 		<input type="number" id="#age"><br><br>
 
-		<label for="DOB">DOB</label><br>
+		<label for="DOB">DOB*</label><br>
 		<input type="date" id="#dob"><br><br>
 
-		<label for="password">Password</label><br>
+		<label for="password">Password*</label><br>
 		<input type="password" id="#password"><br><br>
 
 		<input type="submit" value="submit">
