--- a/main.html
+++ b/main.html
@@ -19,14 +19,14 @@
 		<input type="radio" name="Gender" value="female">
 		<label for="male">Female</label><br><br>
 
-		<label for="laptop brands">Laptop Brands*</label><br>
-		<input type="checkbox" name="Laptop Brands" value="Apple">
+		<label for="laptop brands">Laptop Brands</label><br>
+		<input type="checkbox" name="Laptop Brands" id="#laptop" value="Apple">
 		<label for="apple">Apple</label>
 
-		<input type="checkbox" name="Laptop Brands" value="Apple">
+		<input type="checkbox" name="Laptop Brands" id="laptop" value="Apple">
 		<label for="asus">Asus</label>
 
-		<input type="checkbox" name="Laptop Brands" value="Apple">
+		<input type="checkbox" name="Laptop Brands" id="laptop" value="Apple">
 		<label for="hp">HP</label><br><br>
 
 		<label for="age">Age*</label><br>
@@ -37,6 +37,9 @@
 
 		<label for="password">Password*</label><br>
 		<input type="password" id="#password"><br><br>
+
+		<label for="website URL">website URL</label>
+		<input type="url" id="portfolio">
 
 		<input type="submit" value="submit">
 		
