--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-	<form action="/main.html job-app-form-sidheshwarchoure">
+	<form action="/job-app-form-sidheshwarchoure">
 		<label for="name">Name*</label><br>
 		<input type="text" id="#name"><br><br>
 		<label for="email">Email*</label><br>
@@ -38,8 +38,8 @@
 		<label for="password">Password*</label><br>
 		<input type="password" id="#password"><br><br>
 
-		<label for="website URL">website URL</label>
-		<input type="url" id="portfolio">
+		<label for="website URL">website URL</label><br>
+		<input type="url" name="text" id="portfolio"><br><br>
 
 		<input type="submit" value="submit">
 		
