--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-	<form action="/job-app-form-sidheshwarchoure" method="post">
+	<form action="/job-app-form-sidheshwarchoure/main.html" method="post">
 		<label for="name">Name*</label><br>
 		<input type="text" id="#name"><br><br>
 		<label for="email">Email*</label><br>
