--- a/main.html
+++ b/main.html
@@ -7,11 +7,11 @@
 </head>
 
 <body>
-	<form action="/job-app-form-sidheshwarchoure/main.html" method="post">
+	<form action="/main.html">
 		<label for="name">Name*</label><br>
 		<input type="text" id="#name"><br><br>
 		<label for="email">Email*</label><br>
-		<input type="text" id="#email"><br><br>
+		<input type="email" id="#email"><br><br>
 		<label for="gender">Gender*</label><br>
 		<input type="radio" name="Gender" value="Male">
 		<label for="male">Male</label>
@@ -44,7 +44,7 @@
 		<input type="submit" value="submit">
 		
 
-
+    </form>
 
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
