--- a/main.html
+++ b/main.html
@@ -20,13 +20,13 @@
 		<label for="male">Female</label><br><br>
 
 		<label for="laptop brands">Laptop Brands</label><br>
-		<input type="checkbox" name="Laptop Brands" id="#laptop" value="Apple">
+		<input type="checkbox" name="Apple" id="#laptop" value="Apple">
 		<label for="apple">Apple</label>
 
-		<input type="checkbox" name="Laptop Brands" id="laptop" value="Apple">
+		<input type="checkbox" name="Asus" id="#laptop" value="Asus">
 		<label for="asus">Asus</label>
 
-		<input type="checkbox" name="Laptop Brands" id="laptop" value="Apple">
+		<input type="checkbox" name="HP" id="#laptop" value="HP">
 		<label for="hp">HP</label><br><br>
 
 		<label for="age">Age*</label><br>
@@ -39,7 +39,7 @@
 		<input type="password" id="#password"><br><br>
 
 		<label for="website URL">website URL</label><br>
-		<input type="url" name="text" id="portfolio"><br><br>
+		<input type="url" name="URL" id="portfolio"><br><br>
 
 		<input type="submit" value="submit">
 		
