--- a/main.html
+++ b/main.html
@@ -20,14 +20,19 @@
 		<label for="male">Female</label><br><br>
 
 		<label for="laptop brands">Laptop Brands</label><br>
-		<input type="checkbox" name="Apple" id="#laptop" value="Apple">
-		<label for="apple">Apple</label>
+		<select>
+			<option value="choose an option">choose an option</option>
+			<option value="Apple">Apple</option>
+		    <option value="Asus">Asus</option>
+		    <option value="HP">HP</select><br><br>
+		<!-- <input type="checkbox" name="Apple" id="#laptop" value="Apple"> -->
+		<!-- <label for="apple">Apple</label>
 
 		<input type="checkbox" name="Asus" id="#laptop" value="Asus">
 		<label for="asus">Asus</label>
 
 		<input type="checkbox" name="HP" id="#laptop" value="HP">
-		<label for="hp">HP</label><br><br>
+		<label for="hp">HP</label><br><br> -->
 
 		<label for="age">Age*</label><br>
 		<input type="number" id="#age"><br><br>
