--- a/main.html
+++ b/main.html
@@ -21,10 +21,10 @@
 
 		<label for="laptop brands">Laptop Brands</label><br>
 		<select>
-			<option value="choose an option">choose an option</option>
-			<option value="Apple">Apple</option>
-		    <option value="Asus">Asus</option>
-		    <option value="HP">HP</select><br><br>
+			<option value="choose an option">choose an option:</option>
+			<option value="Apple" id="#laptop">Apple</option>
+		    <option value="Asus" id="laptop">Asus</option>
+		    <option value="HP" id="laptop">HP</select><br><br>
 		<!-- <input type="checkbox" name="Apple" id="#laptop" value="Apple"> -->
 		<!-- <label for="apple">Apple</label>
 
