--- a/main.html
+++ b/main.html
@@ -16,8 +16,8 @@
 		<input type="radio" name="Gender" value="Male">
 		<label for="male">Male</label>
 
-		<input type="radio" name="Gender" value="female">
-		<label for="male">Female</label><br><br>
+		<input type="radio" name="Gender" value="Female">
+		<label for="female">Female</label><br><br>
 
 		<label for="laptop brands">Laptop Brands</label><br>
 		<select>
