--- a/main.html
+++ b/main.html
@@ -24,7 +24,7 @@
 			<option value="choose an option">choose an option:</option>
 			<option value="Apple" id="#laptop">Apple</option>
 		    <option value="Asus" id="laptop">Asus</option>
-		    <option value="HP" id="laptop">HP</select><br><br>
+		    <option value="HP" id="#laptop">HP</select><br><br>
 		<!-- <input type="checkbox" name="Apple" id="#laptop" value="Apple"> -->
 		<!-- <label for="apple">Apple</label>
 
@@ -51,10 +51,8 @@
 
     </form>
 
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+	</body>
+<!-- the entire body must be written by student -->
+<script type="text/javascript" src="./script.js">
 </script>
-
-</body>
-
 </html>
