--- a/main.html
+++ b/main.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+	<h2>Job App Form</h2>
 	<form action="/main.html">
 		<label for="name">Name*</label><br>
 		<input type="text" id="#name"><br><br>
