--- a/main.html
+++ b/main.html
@@ -9,20 +9,20 @@
 <body>
 	<h2>Job App Form</h2>
 	<form action="/main.html">
-		<label for="name">Name*</label><br>
+		<label for="name">Name:*</label><br>
 		<input type="text" id="#name"><br><br>
-		<label for="email">Email*</label><br>
+		<label for="email">Email:*</label><br>
 		<input type="email" id="#email"><br><br>
-		<label for="gender">Gender*</label><br>
+		<label for="gender">Gender:*</label><br>
 		<input type="radio" name="Gender" value="Male">
 		<label for="male">Male</label>
 
 		<input type="radio" name="Gender" value="Female">
 		<label for="female">Female</label><br><br>
 
-		<label for="laptop brands">Laptop Brands</label><br>
+		<label for="laptop brands">Laptop Brands:</label><br>
 		<select>
-			<option value="choose an option">choose an option:</option>
+			<option value="option">options:</option>
 			<option value="Apple" id="#laptop">Apple</option>
 		    <option value="Asus" id="laptop">Asus</option>
 		    <option value="HP" id="#laptop">HP</select><br><br>
@@ -35,16 +35,16 @@
 		<input type="checkbox" name="HP" id="#laptop" value="HP">
 		<label for="hp">HP</label><br><br> -->
 
-		<label for="age">Age*</label><br>
+		<label for="age">Age:*</label><br>
 		<input type="number" id="#age"><br><br>
 
-		<label for="DOB">DOB*</label><br>
+		<label for="DOB">DOB:*</label><br>
 		<input type="date" id="#dob"><br><br>
 
-		<label for="password">Password*</label><br>
+		<label for="password">Password:*</label><br>
 		<input type="password" id="#password"><br><br>
 
-		<label for="website URL">website URL</label><br>
+		<label for="website URL">URL:</label><br>
 		<input type="url" name="URL" id="portfolio"><br><br>
 
 		<input type="submit" value="submit">
