--- a/main.html
+++ b/main.html
@@ -14,17 +14,17 @@
 		<label for="email">Email:*</label><br>
 		<input type="email" id="#email"><br><br>
 		<label for="gender">Gender:*</label><br>
-		<input type="radio" name="Gender" value="Male">
+		<input type="radio" name="gender" value="Male">
 		<label for="male">Male</label>
 
-		<input type="radio" name="Gender" value="Female">
+		<input type="radio" name="gender" value="Female">
 		<label for="female">Female</label><br><br>
 
 		<label for="laptop brands">Laptop Brands:</label><br>
 		<select>
 			<option value="option">options:</option>
 			<option value="Apple" id="#laptop">Apple</option>
-		    <option value="Asus" id="laptop">Asus</option>
+		    <option value="Asus" id="#laptop">Asus</option>
 		    <option value="HP" id="#laptop">HP</select><br><br>
 		<!-- <input type="checkbox" name="Apple" id="#laptop" value="Apple"> -->
 		<!-- <label for="apple">Apple</label>
