--- a/main.html
+++ b/main.html
@@ -39,14 +39,14 @@
 		<label for="age">Age:*</label><br>
 		<input type="number" id="#age"><br><br>
 
-		<label for="DOB">DOB:*</label><br>
+		<label for="dob">DOB:*</label><br>
 		<input type="date" id="#dob"><br><br>
 
 		<label for="password">Password:*</label><br>
 		<input type="password" id="#password"><br><br>
 
-		<label for="website URL">URL:</label><br>
-		<input type="url" name="URL" id="portfolio"><br><br>
+		<label for="portfolio">URL:</label><br>
+		<input type="url" name="url" id="portfolio"><br><br>
 
 		<input type="submit" value="submit">
 		
