--- a/main.html
+++ b/main.html
@@ -10,10 +10,10 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<h2>Job App Form</h2>
-	<form action="/main.html">
-		<label for="name">Name:*</label><br>
+	<form action="/main.html" method="post"></form>
+		<label for="#name">Name:*</label><br>
 		<input type="text" id="#name"><br><br>
-		<label for="email">Email:*</label><br>
+		<label for="#email">Email:*</label><br>
 		<input type="email" id="#email"><br><br>
 		<label for="gender">Gender:*</label><br>
 		<input type="radio" name="gender" value="Male">
@@ -37,13 +37,13 @@
 		<input type="checkbox" name="HP" id="#laptop" value="HP">
 		<label for="hp">HP</label><br><br> -->
 
-		<label for="age">Age:*</label><br>
+		<label for="#age">Age:*</label><br>
 		<input type="number" id="#age"><br><br>
 
-		<label for="dob">DOB:*</label><br>
+		<label for="#dob">DOB:*</label><br>
 		<input type="date" id="#dob"><br><br>
 
-		<label for="password">Password:*</label><br>
+		<label for="#password">Password:*</label><br>
 		<input type="password" id="#password"><br><br>
 
 		<label for="portfolio">URL:</label><br>
