--- a/main.html
+++ b/main.html
@@ -47,7 +47,7 @@
 		<input type="password" id="#password"><br><br>
 
 		<label for="portfolio">URL:</label><br>
-		<input type="url" name="url" id="portfolio"><br><br>
+		<input type="url" id="portfolio"><br><br>
 
 		<input type="submit" value="submit">
 		
