--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
 <html>
     
 <head>
-	<title>HTML page</title>
+	<title>Job app form</title>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
@@ -12,31 +12,31 @@
 	<h2>Job App Form</h2>
 	<form action="/main.html" method="post"></form>
 		<label for="#name">Name:*</label><br>
-		<input type="text" id="#name"><br><br>
+		<input type="text" id="#name" required><br><br>
 		<label for="#email">Email:*</label><br>
-		<input type="email" id="#email"><br><br>
+		<input type="email" id="#email" required><br><br>
 		<label for="gender">Gender:*</label><br>
-		<input type="radio" name="gender" value="Male">
+		<input type="radio" name="gender" value="Male" required>
 		<label for="male">Male</label>
 
-		<input type="radio" name="gender" value="Female">
+		<input type="radio" name="gender" value="Female" required>
 		<label for="female">Female</label><br><br>
 
 		<label for="laptop brands">Laptop Brands:</label><br>
-		<select>
+		<select name="laptop" id="#laptop" required>
 			<option value="option">options:</option>
-			<option value="Apple" id="#laptop">Apple</option>
-		    <option value="Asus" id="#laptop">Asus</option>
-		    <option value="HP" id="#laptop">HP</select><br><br>
+			<option value="Apple">Apple</option>
+		    <option value="Asus">Asus</option>
+		    <option value="HP">HP</select><br><br>
 				
 		<label for="#age">Age:*</label><br>
-		<input type="number" id="#age"><br><br>
+		<input type="number" id="#age" required><br><br>
 
 		<label for="#dob">DOB:*</label><br>
-		<input type="date" id="#dob"><br><br>
+		<input type="date" id="#dob" required><br><br>
 
 		<label for="#password">Password:*</label><br>
-		<input type="password" id="#password"><br><br>
+		<input type="password" id="#password" required><br><br>
 
 		<label for="portfolio">URL:</label><br>
 		<input type="url" id="portfolio"><br><br>
