--- a/main.html
+++ b/main.html
@@ -11,9 +11,9 @@
 	<!-- the entire body must be written by student -->
 	<h2>Job App Form</h2>
 	<form action="/main.html" method="post"></form>
-		<label for="#name">Name:*</label><br>
+		<label for="name">Name:*</label><br>
 		<input type="text" id="#name" required><br><br>
-		<label for="#email">Email:*</label><br>
+		<label for="email">Email:*</label><br>
 		<input type="email" id="#email" required><br><br>
 		<label for="gender">Gender:*</label><br>
 		<input type="radio" name="gender" value="Male" required>
@@ -29,13 +29,13 @@
 		    <option value="Asus">Asus</option>
 		    <option value="HP">HP</select><br><br>
 				
-		<label for="#age">Age:*</label><br>
+		<label for="age">Age:*</label><br>
 		<input type="number" id="#age" required><br><br>
 
-		<label for="#dob">DOB:*</label><br>
+		<label for="dob">DOB:*</label><br>
 		<input type="date" id="#dob" required><br><br>
 
-		<label for="#password">Password:*</label><br>
+		<label for="password">Password:*</label><br>
 		<input type="password" id="#password" required><br><br>
 
 		<label for="portfolio">URL:</label><br>
