--- a/main.html
+++ b/main.html
@@ -9,7 +9,6 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<h2>Job App Form</h2>
 	<form action="/main.html" method="post"></form>
 		<label for="name">Name:*</label><br>
 		<input type="text" id="#name" required><br><br>
@@ -24,10 +23,10 @@
 
 		<label for="laptop brands">Laptop Brands:</label><br>
 		<select name="laptop" id="#laptop" required>
-			<option value="option">options:</option>
+			<option value="options">options:</option>
 			<option value="Apple">Apple</option>
 		    <option value="Asus">Asus</option>
-		    <option value="HP">HP</select><br><br>
+		    <option value="HP">HP</option></select><br><br>
 				
 		<label for="age">Age:*</label><br>
 		<input type="number" id="#age" required><br><br>
@@ -36,7 +35,7 @@
 		<input type="date" id="#dob" required><br><br>
 
 		<label for="password">Password:*</label><br>
-		<input type="password" id="#password" required><br><br>
+		<input type="password" id="#password" ><br><br>
 
 		<label for="portfolio">URL:</label><br>
 		<input type="url" id="portfolio"><br><br>
