--- a/main.html
+++ b/main.html
@@ -35,7 +35,7 @@
 		<input type="date" id="dob" required><br><br>
 
 		<label for="password">Password:*</label><br>
-		<input type="password" id="password" ><br><br>
+		<input type="password" id="password" required ><br><br>
 
 		<label for="portfolio">URL:</label><br>
 		<input type="url" id="portfolio"><br><br>
