--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
 	<!-- the entire body must be written by student -->
 	<form action="/main.html" method="post"></form>
 		<label for="name">Name:*</label><br>
-		<input type="text" id="#name" required><br><br>
+		<input type="text" id="name" value="name" required><br><br>
 		<label for="email">Email:*</label><br>
 		<input type="email" id="email" required><br><br>
 		<label for="gender">Gender:*</label><br>
