--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
 		<label for="name">Name:*</label><br>
 		<input type="text" id="name" value="name" required><br><br>
 		<label for="email">Email:*</label><br>
-		<input type="email" id="email" required><br><br>
+		<input type="email" id="email" value="email" required><br><br>
 		<label for="gender">Gender:*</label><br>
 		<input type="radio" name="gender" value="Male" required>
 		<label for="male">Male</label>
@@ -29,16 +29,16 @@
 		    <option value="HP">HP</option></select><br><br>
 				
 		<label for="age">Age:*</label><br>
-		<input type="number" id="age" required><br><br>
+		<input type="number" id="age" value="age" required><br><br>
 
 		<label for="dob">DOB:*</label><br>
-		<input type="date" id="dob" required><br><br>
+		<input type="date" id="dob" value="dob" required><br><br>
 
 		<label for="password">Password:*</label><br>
-		<input type="password" id="password" required ><br><br>
+		<input type="password" id="password" value="password" required ><br><br>
 
 		<label for="portfolio">URL:</label><br>
-		<input type="url" id="portfolio"><br><br>
+		<input type="url" id="portfolio" value="url"><br><br>
 
 		<input type="submit" value="submit">
 		
