--- a/main.html
+++ b/main.html
@@ -11,9 +11,9 @@
 	<!-- the entire body must be written by student -->
 	<form action="/main.html" method="post"></form>
 		<label for="name">Name:*</label><br>
-		<input type="text" id="name" value="name" required><br><br>
+		<input type="text" id="#name" value="name" required><br><br>
 		<label for="email">Email:*</label><br>
-		<input type="email" id="email" value="email" required><br><br>
+		<input type="email" id="#email" value="email" required><br><br>
 		<label for="gender">Gender:*</label><br>
 		<input type="radio" name="gender" value="Male" required>
 		<label for="male">Male</label>
@@ -22,20 +22,20 @@
 		<label for="female">Female</label><br><br>
 
 		<label for="laptop brands">Laptop Brands:</label><br>
-		<select name="laptop" id="laptop" required>
+		<select name="laptop" id="#laptop" required>
 			<option value="options">options:</option>
 			<option value="Apple">Apple</option>
 		    <option value="Asus">Asus</option>
 		    <option value="HP">HP</option></select><br><br>
 				
 		<label for="age">Age:*</label><br>
-		<input type="number" id="age" value="age" required><br><br>
+		<input type="number" id="#age" value="age" required><br><br>
 
 		<label for="dob">DOB:*</label><br>
-		<input type="date" id="dob" value="dob" required><br><br>
+		<input type="date" id="#dob" value="dob" required><br><br>
 
 		<label for="password">Password:*</label><br>
-		<input type="password" id="password" value="password" required ><br><br>
+		<input type="password" id="#password" value="password" required ><br><br>
 
 		<label for="portfolio">URL:</label><br>
 		<input type="url" id="portfolio" value="url"><br><br>
