--- a/main.html
+++ b/main.html
@@ -9,8 +9,8 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<form action="/main.html" method="post"></form>
-		<label for="input#name">Name:*</label><br>
+	<form action="/main.html" method="post">
+		<label for="name">Name:*</label><br>
 		<input type="text" id="name" value="name" required><br><br>
 		<label for="email">Email:*</label><br>
 		<input type="email" id="email" value="email" required><br><br>
