--- a/main.html
+++ b/main.html
@@ -21,7 +21,7 @@
 		<input type="radio" name="gender" value="Female" required>
 		<label for="female">Female</label><br><br>
 
-		<label for="laptop brands">Laptop Brands:</label><br>
+		<label for="laptop">Laptop Brands:</label><br>
 		<select name="laptop" id="laptop" required>
 			<option value="options">options:</option>
 			<option value="Apple">Apple</option>
