--- a/main.html
+++ b/main.html
@@ -40,7 +40,8 @@
 		<label for="portfolio">portfolio:</label><br>
 		<input type="url" id="portfolio" value="url"><br><br>
 
-		<input type="submit" value="submit">
+		<!-- <input type="submit" value="submit"> -->
+		<button type="submit">submit</button>
 		
 
     </form>
